--- a/flask_app/templates/other_users_profile.html
+++ b/flask_app/templates/other_users_profile.html
@@ -40,6 +40,8 @@
                     <div class="username">
                         <h2 class="username">{{users.username}} 
                     </div>
+
+                    <!-- ADD FUNCTIONALITY TO REMOVE ADD FRIEND IF ALREADY SENT REQUEST OR ALREADY FRIENDS -->
                     <div class="send_request">
                         <form id="request_form" action="/send_request" method="post">
                             <input type="hidden" name="request_sender_id" value="{{session['user_id']}}">
@@ -51,6 +53,8 @@
                             <button type="submit" class="request-btn"><img class="friend_request" src="{{ url_for('static', filename='img/friend_request.png') }}" alt="request"></button>
                         </form>
                     </div>
+
+
                 </div>
                 
                 <div id="bio">
